@startuml HojaDeCalculo

class HojaDeCalculo {
    - sheet: Sheet
    - movement: Movement
    - input: Scanner
    + HojaDeCalculo()
    + run(): void
}

class Sheet {
    - rows: int
    - columns: int
    + Sheet
    + setCellValue
    + getCurrentCell()
    + setCurrentCell
    + setCellSize
    + getSpacing()
    + getSheetData()
}

class Movement {
    + getCurrentRow
    + getCurrentColumn
    + handleCommand
}

class Scanner {
    
}

class OperacionesMatematicas {
    + evaluarFormula()
    - evaluarExpresion()
    - obtenerValorCelda()
    - esOperador()
    - precedencia()
    - aplicarOperacion()
}

HojaDeCalculo *-- Sheet 
HojaDeCalculo *-- Movement 
HojaDeCalculo *-- Scanner 
HojaDeCalculo *-- OperacionesMatematicas

@enduml
